[gd_scene load_steps=22 format=3 uid="uid://dhm3ap26ad055"]

[ext_resource type="Script" uid="uid://7tisbx1ucf0" path="res://scenes/Main/main.gd" id="1_d463r"]
[ext_resource type="Script" uid="uid://c3qxqx1qtbg3m" path="res://scenes/Main/water.gd" id="1_pkilc"]
[ext_resource type="Script" uid="uid://bomcl5x8jmoqs" path="res://scenes/Main/jetski.gd" id="3_d463r"]
[ext_resource type="Texture2D" uid="uid://ceg5eakuu0ilt" path="res://assets/jetski.png" id="4_q8kdv"]
[ext_resource type="Texture2D" uid="uid://c4sjmmnj8npuu" path="res://assets/sky-bg.png" id="5_72nt1"]
[ext_resource type="Texture2D" uid="uid://dnins0y66iy1m" path="res://assets/grass-bg.png" id="6_plsdc"]
[ext_resource type="Script" uid="uid://cp1ptqbm6rktp" path="res://scenes/Main/coin.gd" id="7_exyxu"]
[ext_resource type="Texture2D" uid="uid://cle4hlf0kinru" path="res://assets/beach-bg.png" id="7_iekte"]
[ext_resource type="Texture2D" uid="uid://8llyas30vyxm" path="res://assets/coin.png" id="7_q8kdv"]
[ext_resource type="Script" uid="uid://cp4nc301s8t1l" path="res://scenes/Main/coin_groups.gd" id="7_r0gd4"]
[ext_resource type="Script" uid="uid://bvub3mbysm4ve" path="res://scenes/Main/main_gui.gd" id="8_gqpea"]
[ext_resource type="FontFile" uid="uid://c071ukeci0smi" path="res://assets/OldSchoolAdventures-42j9.ttf" id="9_vup2a"]
[ext_resource type="Texture2D" uid="uid://dripgg2ipg786" path="res://assets/pausebutton.png" id="9_yxg74"]
[ext_resource type="Texture2D" uid="uid://bn00ku7pyul1u" path="res://assets/unpausebutton.png" id="10_gqpea"]
[ext_resource type="Script" uid="uid://dkhlnay0d1h5u" path="res://scenes/Main/death_groups.gd" id="11_1jtt4"]
[ext_resource type="Script" uid="uid://cr4vbu3eghay0" path="res://scenes/Main/debug_trigger.gd" id="11_gqpea"]
[ext_resource type="Texture2D" uid="uid://d08tyr7nx05vo" path="res://assets/deathtrigger.png" id="11_yxg74"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exyxu"]
size = Vector2(9.74998, 8.00002)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0gd4"]
size = Vector2(22.0075, 8.8712)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krkin"]
size = Vector2(10.25, 7.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yxg74"]
size = Vector2(14, 12)

[node name="Main" type="Node2D"]
script = ExtResource("1_d463r")

[node name="Water" type="Node2D" parent="."]
z_index = 11
script = ExtResource("1_pkilc")

[node name="Jetski" type="CharacterBody2D" parent="."]
z_index = 10
position = Vector2(79, 55)
script = ExtResource("3_d463r")

[node name="Sprite2D" type="Sprite2D" parent="Jetski"]
texture_filter = 1
texture = ExtResource("4_q8kdv")

[node name="UpperHitBox" type="CollisionShape2D" parent="Jetski"]
position = Vector2(11.875, -4)
shape = SubResource("RectangleShape2D_exyxu")

[node name="LowerHitBox" type="CollisionShape2D" parent="Jetski"]
position = Vector2(3.99623, 3.5644)
shape = SubResource("RectangleShape2D_r0gd4")

[node name="RearHitBox" type="CollisionShape2D" parent="Jetski"]
position = Vector2(-12, -0.125)
shape = SubResource("RectangleShape2D_krkin")

[node name="Background" type="Node2D" parent="."]

[node name="Sky" type="Parallax2D" parent="Background"]

[node name="Sprite2D" type="Sprite2D" parent="Background/Sky"]
z_index = -1
texture_filter = 1
position = Vector2(160, 28)
texture = ExtResource("5_72nt1")

[node name="Grass" type="Parallax2D" parent="Background"]

[node name="Sprite2D" type="Sprite2D" parent="Background/Grass"]
z_index = -1
texture_filter = 1
texture_repeat = 1
position = Vector2(0, 56)
texture = ExtResource("6_plsdc")
centered = false

[node name="Beach" type="Parallax2D" parent="Background"]

[node name="Sprite2D" type="Sprite2D" parent="Background/Beach"]
z_index = -1
texture_filter = 1
position = Vector2(0, 69)
texture = ExtResource("7_iekte")
centered = false

[node name="CoinGroups" type="Node2D" parent="."]
script = ExtResource("7_r0gd4")

[node name="Coin" type="Area2D" parent="CoinGroups" groups=["collectibles"]]
z_as_relative = false
position = Vector2(67, -143)
script = ExtResource("7_exyxu")

[node name="Sprite2D" type="Sprite2D" parent="CoinGroups/Coin"]
visible = false
texture_filter = 1
texture = ExtResource("7_q8kdv")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoinGroups/Coin"]
visible = false
position = Vector2(6, 6)
shape = SubResource("RectangleShape2D_yxg74")

[node name="GUI" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 20.0
offset_bottom = 20.0
script = ExtResource("8_gqpea")

[node name="CoinCounter" type="RichTextLabel" parent="GUI"]
texture_filter = 1
layout_direction = 2
layout_mode = 1
offset_right = 106.0
offset_bottom = 37.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9_vup2a")
theme_override_font_sizes/normal_font_size = 7
bbcode_enabled = true
scroll_active = false

[node name="DistanceLabel" type="RichTextLabel" parent="GUI"]
layout_mode = 0
offset_top = 11.0
offset_right = 167.0
offset_bottom = 41.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9_vup2a")
theme_override_font_sizes/normal_font_size = 7
bbcode_enabled = true

[node name="PauseButton" type="TextureButton" parent="GUI"]
process_mode = 3
texture_filter = 1
layout_mode = 0
offset_left = 298.0
offset_top = 6.0
offset_right = 362.0
offset_bottom = 70.0
scale = Vector2(0.25, 0.25)
toggle_mode = true
texture_normal = ExtResource("9_yxg74")
texture_pressed = ExtResource("10_gqpea")
stretch_mode = 0

[node name="DeathGroups" type="Node2D" parent="."]
script = ExtResource("11_1jtt4")

[node name="DeathTrigger" type="Area2D" parent="DeathGroups" groups=["obstacles"]]
z_as_relative = false
position = Vector2(190, -143)
script = ExtResource("11_gqpea")

[node name="Sprite2D" type="Sprite2D" parent="DeathGroups/DeathTrigger"]
visible = false
texture_filter = 1
texture = ExtResource("11_yxg74")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathGroups/DeathTrigger"]
visible = false
position = Vector2(6, 5.5)
shape = SubResource("RectangleShape2D_yxg74")
